fix overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,9 @@
   font-family: 'VarelaRound';
   src: url('fonts/Varela_Round/VarelaRound-Regular.ttf') format('truetype');
 }
-
+*{
+  box-sizing: border-box;
+}
 
 body {
   background-color: rgb(255, 254, 252);
@@ -59,6 +61,7 @@ h1, h2, h3, h4 {
   margin: 0 1rem;
   color: #DF1A25;
 }
+
 .pinterest:hover {
   cursor: pointer;
   opacity: 80%;
@@ -76,18 +79,19 @@ p, h1, h2, h3, h4, h5 {
 
 #overall-container {
 display: grid;
-grid-template-columns: 1fr;
+grid-template-columns: repeat(auto-fit, 1fr);;
 grid-template-rows: repeat(3, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 10px;
 width: 100vw;
 height: 100%;
+overflow: scroll;
 }
 
 #parent-overview {
 display: grid;
 grid-area: 1 / 1 / 2 / 2;
-grid-template-columns: repeat(2, 1fr);
+grid-template-columns: repeat(auto-fit, 1fr);
 grid-template-rows: repeat(3, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 20px;
@@ -164,13 +168,11 @@ input[type="checkbox"]:checked {
 
 
 #overview-body {
-  position: relative;
   margin: 0 auto;
   grid-area: 2 / 1 / 3 / 3;
   display: flex;
   height: 75vh;
   flex-flow: row;
-  min-height: 600px;
   width: 80vw;
 }
 
@@ -212,13 +214,11 @@ input[type="checkbox"]:checked {
 #overview-body-image {
   position: relative;
   width: 100%;
-  min-width: 400px;
-  max-width: 100%;
   height: 100%;
+  object-fit: cover;
   text-align: center;
-  vertical-align: middle;
   justify-content: center;
-  overflow: hidden;
+
 }
 
 .star-add-to-bag-div {
@@ -273,6 +273,7 @@ input[type="checkbox"]:checked {
 }
 
 .select-size-dropdown {
+  box-sizing: border-box;
   height: 5rem;
   margin-right: 1rem;
   font-size: 1.5rem;
@@ -305,16 +306,16 @@ input[type="checkbox"]:checked {
 }
 
 #overview-body-image img {
-  height: auto;
+  min-height: 600px;
+  height: 100%;
   object-fit: cover;
   max-width: 100%;
-  height: 100%;
 }
 
 
 .overview-zoom-image-expanded {
   object-fit: cover;
-  height: auto;
+  height: 100vh;
   width: 100%;
 }
 
@@ -339,11 +340,11 @@ input[type="checkbox"]:checked {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fit, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  font-size: 4rem;
+  font-size: 3rem;
   padding-left: 1rem;
   margin-left: 2rem;
 }
@@ -363,7 +364,7 @@ input[type="checkbox"]:checked {
   height: 100%;
   display: flex;
   flex-direction: column;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 .read-all-scroll {
   text-decoration: underline;
@@ -416,17 +417,16 @@ input[type="checkbox"]:checked {
 
 .product-styles {
   grid-area: 2 / 1 / 3 / 2;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   margin-top: 2rem;
   align-items: flex-start;
   width: 100%;
-
 }
 
-
 .product-buttons {
+  height: 100%;
   display: flex;
   flex-direction: column;
   grid-area: 3 / 1 / 4 / 2;
@@ -434,14 +434,16 @@ input[type="checkbox"]:checked {
 }
 .overview-description {
   grid-area: 3 / 1 / 4 / 3;
-  height: 25vh;
+  height: 100%;
   margin: 0 auto;
   width: 80vw;
+  display: inline-block;
 }
 
 /* Related Products */
 .related-products {
   grid-area: 2 / 1 / 3 / 2;
+  z-index: -5;
   height: 100vh;
   width: 80vw;
   margin: 0 auto;
@@ -556,7 +558,6 @@ tr th {
 /* Reviews */
 .parent-reviews {
   grid-area: 3 / 1 / 4 / 2;
-  border: 3px solid black;
   height: 100vh;
   width: 80vw;
   margin: 0 auto;
@@ -808,7 +809,7 @@ tr th {
 
 /* Stars Styles Start */
 
-#stars {
+.stars {
   display: flex;
   flex-direction: row;
 }
@@ -841,4 +842,42 @@ tr th {
 
 @media (min-width: 1201px) {
 
+}
+
+@media (max-height: 800px) {
+  * {
+
+    font-size: 14px;
+  }
+  #overview-body {
+    overflow: scroll;
+  }
+
+  #overview-body-image img {
+    min-height: 400px;
+    height: 100%;
+    object-fit: cover;
+    max-width: 100%;
+  }
+  .select-size-dropdown {
+    box-sizing: border-box;
+    height: 4rem;
+    margin-right: 1rem;
+    font-size: 1rem;
+    width: 10rem;
+    border: 2px #525252 solid;
+    outline: none;
+    font-weight: bold;
+    padding: 10px;
+  }
+
+  .select-quantity-dropdown {
+    padding: 10px;
+    height: 4rem;
+    width: 4rem;
+    border: 2px #525252 solid;
+    font-size: 1rem;
+    outline: none;
+    font-weight: bold;
+  }
 }
